--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .jumbotron {
   padding-top: 6rem;
-  background-color: #0099ff;
+  background-color: #0053fb;
 }
 
 #projects {
-  background-color: #00a4fa;
+  background-color: #0099ff;
 }
 
 section {
